# fast-diff-mcp

./: Cargo.toml  Dockerfile  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs
