[build-system]
requires = ["maturin>=1.13.3,<2.0"]
build-backend = "maturin"

[project]
name = "fast-diff-mcp"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "fastmcp>=3.3.1",
]

[project.optional-dependencies]
dev = [
    "faker>=40.19.1",
    "fast-diff-mcp",
    "maturin>=1.13.3",
    "pyo3-stubgen>=0.3.0",
    "pyperf>=2.9.0",
]
[tool.maturin]
features = ["pyo3/extension-module"]

[tool.uv.workspace]
members = ["."]

[tool.uv.sources]
fast-diff-mcp = { workspace = true, editable = true }
